--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,13 @@
             <type>jar</type>
         </dependency>
         
+        <!-- https://mvnrepository.com/artifact/org.mybatis.spring.boot/mybatis-spring-boot-starter -->
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>1.3.0</version>
+        </dependency>
+        
     </dependencies>
 
     <build>
