--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,6 @@ spring.datasource.jdbc-interceptors=ConnectionState;SlowQueryReport(threshold=0)
 # Embeded Tomcat Configuration
 server.port=8181 
 server.contextPath=/demo
+
+# Mybatis ORM
+mybatis.mapper-locations: classpath:mapper.xml
