--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # MySql Connection Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/spring_boot?useUnicode=true&amp;autoReconnect=true&amp;characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://localhost:3306/student?useUnicode=true&amp;autoReconnect=true&amp;characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
