--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-# MySql Connection Configuration
+# MySql Connection
 spring.datasource.url=jdbc:mysql://localhost:3306/student?useUnicode=true&amp;autoReconnect=true&amp;characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
-# Connection Pool Configuration
+# Connection Pool
 spring.datasource.max-idle=10
 spring.datasource.max-wait=10000
 spring.datasource.min-idle=5
@@ -15,7 +15,7 @@ spring.datasource.test-while-idle=true
 spring.datasource.time-between-eviction-runs-millis=18800
 spring.datasource.jdbc-interceptors=ConnectionState;SlowQueryReport(threshold=0)
 
-# Embeded Tomcat Configuration
+# Embeded Tomcat
 server.port=8181 
 server.contextPath=/demo
 
